Backport enabling of FS store.

BUG: 243775

svn path=/branches/akonadi/1.4/; revision=1157128